<resources>
    <string name="app_name">MPDIS_8_Browser</string>
    <string name="action_settings">Settings</string>
    <string name="enter">Enter</string>
    <string name="enter_text">Enter web-address</string>
    <string name="back"><![CDATA[<- Back]]></string>
    <string name="forward"><![CDATA[Forward ->]]></string>
    <string name="clear_history">Clear history</string>
    <string name="refresh">Refresh</string>
</resources>
